--- a/sentiment_classification.ipynb
+++ b/sentiment_classification.ipynb
@@ -352,7 +352,7 @@
         "save_vocab(\"data/vocabs/vocab_amazon_test_500.txt\", amazon_test_lines)\n",
         "\n",
         "# ---- 4) Report ----\n",
-        "print(\"✅ Preprocessing complete.\")\n",
+        "print(\"  Preprocessing complete.\")\n",
         "print(\"  IMDB pool:\", len(imdb_pool_lines), \"(~5500 target)\")\n",
         "print(\"  IMDB test:\", len(imdb_test_lines), \"(target 500)\")\n",
         "print(\"  Amazon test:\", len(amazon_test_lines), \"(target 500)\")\n",
@@ -1018,7 +1018,7 @@
         "    diversity_full = selector.compute_diversity_score(list(range(len(texts))))\n",
         "    diversity_selected = selector.compute_diversity_score(selected_indices)\n",
         "\n",
-        "    print(f\"\\n📊 Diversity: {diversity_selected/diversity_full*100:.1f}% retained\")\n",
+        "    print(f\"\\n Diversity: {diversity_selected/diversity_full*100:.1f}% retained\")\n",
         "\n",
         "    # Save\n",
         "    print(\"\\n[4/4] Saving...\")\n",
@@ -1116,7 +1116,7 @@
         "    for name in all_stats.keys():\n",
         "        print(f\"  • {OUTPUT_DIR}/{name}_3k_selected.txt\")\n",
         "\n",
-        "    print(\"\\n🎉 Done! Ready to train FastText models.\")\n",
+        "    print(\"\\n Done! \")\n",
         "\n",
         "print(\"\\n\" + \"=\"*70)"
       ]
